# squirreld

./: ARCHITECTURE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md
examples/: paper_reader.rs
src/: builder.rs  collection.rs  crypto.rs  engine.rs  error.rs  hlc.rs  lib.rs  types.rs
src/backend/: dynamodb.rs  in_memory.rs  mod.rs  s3.rs
src/blob/: mod.rs  worker.rs
src/db/: blobs.rs  config.rs  index.rs  mod.rs  outbox.rs  records.rs  schema.rs  sync_state.rs
src/sync/: mod.rs
tests/: blob_test.rs  crud_test.rs  e2e_test.rs  encryption_test.rs  index_test.rs  sync_push.rs
