[package]
name = "squirreld"
version = "0.1.0"
edition = "2024"

[lib]
name = "squirreld"
path = "src/lib.rs"

[[bin]]
name = "squirreld"
path = "src/main.rs"

[features]
default = ["dynamodb", "s3", "test-utils"]
# AWS DynamoDB record sync backend
dynamodb = [
    "dep:aws-sdk-dynamodb",
    "dep:aws-config",
    "dep:aws-credential-types",
    "dep:aws-smithy-types",
]
# AWS S3 blob store backend
s3 = [
    "dep:aws-sdk-s3",
    "dep:aws-config",
    "dep:aws-credential-types",
]
# Exports in-memory test doubles for use in downstream tests
test-utils = []
# Enables LocalStack-backed integration tests (requires Docker)
integration-tests = ["test-utils"]

[dependencies]
rusqlite    = { version = "0.31", features = ["bundled"] }
tokio       = { version = "1",    features = ["full"] }
ulid        = "1"
thiserror   = "1"
tracing     = "0.1"
serde_json  = "1"
async-trait = "0.1"
rand        = "0.8"

# DynamoDB backend
aws-sdk-dynamodb     = { version = "1", optional = true }
# S3 backend
aws-sdk-s3           = { version = "1", optional = true }
# Shared AWS primitives (used by both dynamodb and s3 features)
aws-config           = { version = "1", optional = true }
aws-credential-types = { version = "1", optional = true }
aws-smithy-types     = { version = "1", optional = true }

[dev-dependencies]
tempfile = "3"
tokio    = { version = "1", features = ["full"] }
