[package]
name = "squirreld"
version = "0.1.0"
edition = "2024"

[lib]
name = "squirreld"
path = "src/lib.rs"

[[bin]]
name = "squirreld"
path = "src/main.rs"

[dependencies]
rusqlite  = { version = "0.39", features = ["bundled"] }
tokio     = { version = "1",    features = ["full"] }
ulid      = "1"
thiserror = "2"
tracing   = "0.1"
serde_json = "1"
async-trait = "0.1"
rand      = "0.10"

[dev-dependencies]
tempfile  = "3"
